[package]
name = "sh-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "=1.10.1", features = ["serde"] }
color-eyre = "=0.6.5"
config = "=0.15.13"
eyre = "=0.6.12"
jsonptr = "=0.7.1"
rand = "=0.9.2"
rumqttc = "=0.24.0"
serde = "=1.0.219"
serde_json = "=1.0.142"
tokio = { version = "=1.47.1", features = ["full"] }
